Fix image resizing, to stretch the image if necessary.

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -220,8 +220,7 @@ $card-border: 1px solid darken($white, 10%);
 
   img {
     display: block;
-    width: auto;
-    max-width: 100%;
+    width: 100%;
     max-height: 100%;
   }
 
